--- a/doc2.html
+++ b/doc2.html
@@ -5,9 +5,9 @@
 <title>WHAT</title>
 </head>
 <b>WHAT</b>
-<p> Content 1</p>
+<p> Content 2</p>
 
-<p><a href="doc2.html">Next page</a></p>
+<p><a href="index.html">Previous page</a></p>
 
 
 
