google html TAG

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ else
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
 <div class="spoiler" style="display: none;">This is a spoiler. Insert<br>
 case explanation here.</div> 
+<meta name="google-site-verification" content="fVmuW9hVLMa7SqpVs8Hq1HkVG3ew69sTwB4pDIi6WgI" />
 </div> 
 </div>
 
