--- a/credits.html
+++ b/credits.html
@@ -4,14 +4,25 @@
 <meta charset="utf-8">
 <title>AAE: To solve them once and for all</title>
 <link href="huh.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 <b>Ace Attorney Explained!</b> <br>
 ------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
 <p>The people listed here have helped in creating this website.</p>
 
-<b>AANickFan/123fendas</b> <br>Helped: Created this website, has added some explanations.
+<b>AANickFan/123fendas</b> <br>Helped: Created this website, has added some explanations.<br><br>
 
+<b>Harry Gill, coolharrygill85</b><br>Helped: Added an explanation.
+<div style="margin: 0px;"> 
+<div class="smallfont" style="margin-bottom: 2px;"> 
+Which one?<input value="Show" style="margin: 0px; padding: 0px; width: 45px; font-size: 10px;" onclick="if(this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != 'inline') 
+{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'inline'; this.innerText = ''; this.value = 'Hide'; } 
+else 
+{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
+</div> 
+<div class="alt2" style="border: 0px inset; padding: 0px;"> 
+<div class="spoiler" style="display: none;">Rise From The Ashes (Gant's Backstory)</div> 
 
 
 </div> 
