--- a/credits.html
+++ b/credits.html
@@ -22,7 +22,8 @@ else
 { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
 </div> 
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">Rise From The Ashes (Gant's Backstory)</div> 
+<div class="spoiler" style="display: none;">Rise From The Ashes (Gant's Backstory)</div>
+Links:<br><a href="https://www.youtube.com/user/coolharrygill85/featured">YouTube channel</a>
 
 
 </div> 
