--- a/PWAA.html
+++ b/PWAA.html
@@ -32,7 +32,16 @@ else
 { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
 </div> 
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">-----------------------------------<br> Sorry! A case explanation<br> hasn't been written yet. ¯\_(ツ)_/¯<br>-----------------------------------</div> 
+<div class="spoiler" style="display: none;">-----------------------------------<br> Mia wrote down details about Redd White leaking the police using a medium to the public, and 
+everyone called her a fraud and so she left Kurain Village.<br>Redd White owned this company 
+called Bluecorp, which illegally gathered information. April May, secretary of Bluecorp
+wiretapped Mia's phone to hear<br> her conversation with Maya Fey. This is how Redd White found
+out about the documents, and went to Fey & Co Law Offices to murder Mia Fey. He<br> wrote the name
+"Maya" in blood on a piece of paper to pin the murder on Maya Fey. Later, Redd White wanted to
+arrest Phoenix Wright for the murder<br> of Mia Fey. He falsely testified that he saw Phoenix Wright
+murder Mia Fey from the Gatewater Hotel, however Phoenix and Mia cooperated to get<br>Redd White
+to confess to his murder.
+<br>-----------------------------------</div> 
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <br>
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
