--- a/credits.html
+++ b/credits.html
@@ -11,8 +11,22 @@
 ------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
 <p>The people listed here have helped in creating this website.</p>
 
-<b>AANickFan/123fendas</b> <br>Helped: Created this website, has added some explanations.<br><br>
+<b>AANickFan/123fendas</b> <br>Helped: Created this website, has added an explanation.<br>
+<div style="margin: 0px;"> 
+<div class="smallfont" style="margin-bottom: 2px;"> 
+Which one?<input value="Show" style="margin: 0px; padding: 0px; width: 45px; font-size: 10px;" onclick="if(this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != 'inline') 
+{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'inline'; this.innerText = ''; this.value = 'Hide'; } 
+else 
+{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
+</div> 
+<div class="alt2" style="border: 0px inset; padding: 0px;"> 
+<div class="spoiler" style="display: none;">Turnabout Sisters<br></div>
+Links:<br>
+<a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA">YouTube channel</a><br>
+<a href="http://123fendas.deviantart.com/">DeviantArt</a><br>
+<a href="http://aceattorney.sparklin.org/forum/memberlist.php?mode=viewprofile&u=28165">Ace Attorney Online</a>
 
+<br><br>
 <b>Harry Gill, coolharrygill85</b><br>Helped: Added an explanation.
 <div style="margin: 0px;"> 
 <div class="smallfont" style="margin-bottom: 2px;"> 
