--- a/PWAA.html
+++ b/PWAA.html
@@ -32,14 +32,14 @@ else
 { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
 </div> 
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">-----------------------------------<br> Mia wrote down details about Redd White leaking the police using a medium to the public, and 
-everyone called her a fraud and so she left Kurain Village.<br>Redd White owned this company 
-called Bluecorp, which illegally gathered information. April May, secretary of Bluecorp
-wiretapped Mia's phone to hear<br> her conversation with Maya Fey. This is how Redd White found
-out about the documents, and went to Fey & Co Law Offices to murder Mia Fey. He<br> wrote the name
-"Maya" in blood on a piece of paper to pin the murder on Maya Fey. Later, Redd White wanted to
-arrest Phoenix Wright for the murder<br> of Mia Fey. He falsely testified that he saw Phoenix Wright
-murder Mia Fey from the Gatewater Hotel, however Phoenix and Mia cooperated to get<br>Redd White
+<div class="spoiler" style="display: none;">-----------------------------------<br> Mia wrote down details about Redd White leaking information about the police using Misty Fey to channel Gregory Edgeworth to find out who the murderer<br> of DL-6 was, and 
+everyone called Misty Fey a fraud and so she left Kurain Village. Redd White owned this company 
+called Bluecorp, which illegally gathered<br> information. April May, secretary of Bluecorp
+wiretapped Mia's phone to hear her conversation with Maya Fey. This is how Redd White found
+out about the<br> documents, and went to Fey & Co Law Offices to murder Mia Fey. He wrote the name
+"Maya" in blood on a piece of paper to pin the murder on Maya Fey.<br> Later, Redd White wanted to
+arrest Phoenix Wright for the murder of Mia Fey. He falsely testified that he saw Phoenix Wright
+murder Mia Fey from the<br> Gatewater Hotel, however Phoenix and Mia cooperated to get Redd White
 to confess to his murder.
 <br>-----------------------------------</div> 
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
