--- a/credits.html
+++ b/credits.html
@@ -37,9 +37,17 @@ else
 </div> 
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
 <div class="spoiler" style="display: none;">Rise From The Ashes (Gant's Backstory)<br></div>
-Links:<br><a href="https://www.youtube.com/user/coolharrygill85/featured">YouTube channel</a>
-
-
+<p>Links:<br>
+  <a href="https://www.youtube.com/user/coolharrygill85/featured">YouTube channel</a><br>
+  <a href="http://www.twitch.tv/coolharrygill85/profile">Twitch</a><br>
+  <a href="https://twitter.com/coolharrygill85">Twitter</a><br>
+  <a href="https://instagram.com/coolharrygill85/">Instagram</a><br>
+  <a href="http://steamcommunity.com/id/coolharrygill85">Steam</a>
+  
+  
+  
+</p>
+<p></p>
 </div> 
 </div>
 
