--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="google-site-verification" content="fVmuW9hVLMa7SqpVs8Hq1HkVG3ew69sTwB4pDIi6WgI" />
 <title>AAE: To solve them once and for all</title>
 <link href="huh.css" rel="stylesheet" type="text/css">
 </head>
@@ -22,12 +21,14 @@ else
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
 <div class="spoiler" style="display: none;">This is a spoiler. Insert<br>
 case explanation here.</div> 
-
 </div> 
 </div>
 
 </div> 
 </div>
+
+<h1>LEARNING CSS IN PROGRESS</h4>
+<h5>PLEASE BE PATIENT.</h2>
 
 
 
