--- a/PWAA.html
+++ b/PWAA.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <strong>Ace Attorney Explained!</strong> <br>
------- <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
+------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------ <a href="changelog.html">Changelog</a> ------
 <br>
 <b>Phoenix Wright: Ace Attorney</b>
 
