--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <b>Ace Attorney Explained!</b> <br>
------- <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
+------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------ <a href="changelog.html">Changelog</a> ------
 <p>Why hello there! Have you ever thought to yourself: "man, I don't understand how that works and how the killer did that"? Well, this website is a place where<br> pretty much anyone can send an email to me, where they explain a case, and I'll put it up on this website! You can either come here to read the explanations,<br> or write explanations for me to put up on the website! </p>
 
 <p><b>WARNING!</b> This website contains <b>SPOILERS</b>. Every case explanation will be hidden inside a spoiler tag. See below.</p>
