--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <b>Ace Attorney Explained!</b> <br>
------- <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
+------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------ <a href="changelog.html">Changelog</a> ------
 <br><b>Contact</b>
 <p>Contact my email below where you can submit your explanation to be shared on this website!</p>
 
@@ -20,7 +20,7 @@ else
 </div> 
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
 <div class="spoiler" style="display: none;">-----------------------------------<br>You <b>will</b> be credited on the credits page. You can link to your social media, or your full name, or whatever. If you want to do uncredited work, there are options for that too.<br> <b>Type the name of the case in the subject of the email</b>. Even I haven't seen all the cases yet, so keep that in mind.</b>.<br>-----------------------------------</span></div>
-<br>Submit to <u>AANickFan@gmail.com</u>.
+<br>Submit to <u>submit.aae@gmail.com</u>.
 
 
 
