--- a/credits.html
+++ b/credits.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <b>Ace Attorney Explained!</b> <br>
------- <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------
+------ <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------ <a href="changelog.html">Changelog</a> ------
 <p>The people listed here have helped in creating this website.</p>
 
 <b>AANickFan/123fendas</b> <br>Helped: Created this website, has added an explanation.<br>
