--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@ else
 <div class="alt2" style="border: 0px inset; padding: 0px;"> 
 <div class="spoiler" style="display: none;">-----------------------------------<br>You <b>will</b> be credited on the credits page. You can link to your social media, or your full name, or whatever. If you want to do uncredited work, there are options for that too.<br> <b>Type the name of the case in the subject of the email</b>. Even I haven't seen all the cases yet, so keep that in mind.</b>.<br>-----------------------------------</span></div>
 <br>Submit to <u>submit.aae@gmail.com</u>.
+<p><b>NOTE: I rarely check my emails. You're better off contacting me through YouTube (see credits page) than sending an email.</b></p>
 
 
 
