--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
 <meta charset="utf-8">
 <title>AAE: To solve them once and for all</title>
-<link href="huh.css" rel="stylesheet" type="text/css">
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<b>Ace Attorney Explained!</b> <br>
------- <a href="index.html">Main Page</a> ------ <a href="PWAA.html">PW:AA</a> ------ <a href="PWAAJFA.html">PW:AA_JFA</a> ------ <a href="PWAAT&T.html">PW:AA_T&T</a> ------ <a href="AJAA.html">AJ:AA</a> ------ <a href="PWAADD.html">PW:AA_DD</a> ------<a href="contact.html">Contact</a> ------ <a href="credits.html">Credits</a> ------ <a href="changelog.html">Changelog</a> ------
-<p>Why hello there! Have you ever thought to yourself: "man, I don't understand how that works and how the killer did that"? Well, this website is a place where<br> pretty much anyone can send an email to me, where they explain a case, and I'll put it up on this website! You can either come here to read the explanations,<br> or write explanations for me to put up on the website! </p>
+<p id="paragee">Look at this paragraph</p>
 
-<p><b>WARNING!</b> This website contains <b>SPOILERS</b>. Every case explanation will be hidden inside a spoiler tag. See below.</p>
+<div id="content">
+<p>Why hello there! Have you ever thought to yourself: "man, I don't understand how that works<br> and how the killer did that"? Well, this website is a place where pretty much anyone can send<br> an email to me, where they explain a case, and I'll put it up on this website! You can either<br> come here to read the explanations, or write explanations for me to put up on the website! </p>
+
+
+
+
+
+<p><b>WARNING!</b> This website contains <b>SPOILERS</b>.<br> Every case explanation will be hidden inside a spoiler tag. See below.</p>
 <div style="margin: 0px;"> 
 <div class="smallfont" style="margin-bottom: 2px;"> 
 <strong>Spoiler!</strong> <input value="Show" style="margin: 0px; padding: 0px; width: 45px; font-size: 10px;" onclick="if(this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != 'inline') 
@@ -27,8 +32,17 @@ case explanation here.</div>
 </div> 
 </div>
 
-<h1>LEARNING CSS IN PROGRESS</h4>
-<h5>PLEASE BE PATIENT.</h2>
+<p id="apollo_tip">PROTIP! If you're bored,<br> click "Bored?" on the<br> left side of the page!</p>
+
+
+
+
+
+</div> 
+<div class="alt2" style="border: 0px inset; padding: 0px;"> 
+<div class="spoiler" style="display: none;">{param}</div> 
+</div> 
+</div>
 
 
 
@@ -39,12 +53,16 @@ case explanation here.</div>
 </div>
 
 
-
-</div> 
-<div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">{param}</div> 
-</div> 
 </div>
+
+<img id="apollo_help" src="Apollo_Grinning.gif">
+
+<!--navigation, logo -->
+
+<!--#include virtual="page_essentials.html" -->
+
+
+
 
 </body>
 </html>
