--- a/buttons/obi-wan.html
+++ b/buttons/obi-wan.html
@@ -29,7 +29,7 @@
 
 <!-- Small text !-->
 
-<p id="credit"><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA">by AANickFan</a></p>
+<p id="credit"><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA" target="_blank">by AANickFan</a></p>
 <p id="credit2">Star Wars is made by Lucasfilms.</p>
 
 </div>	
