work in progress

--- a/index.html
+++ b/index.html
@@ -6,62 +6,8 @@
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<p id="paragee">Look at this paragraph</p>
 
-<div id="content">
-<p>Why hello there! Have you ever thought to yourself: "man, I don't understand how that works<br> and how the killer did that"? Well, this website is a place where pretty much anyone can send<br> an email to me, where they explain a case, and I'll put it up on this website! You can either<br> come here to read the explanations, or write explanations for me to put up on the website! </p>
-
-
-
-
-
-<p><b>WARNING!</b> This website contains <b>SPOILERS</b>.<br> Every case explanation will be hidden inside a spoiler tag. See below.</p>
-<div style="margin: 0px;"> 
-<div class="smallfont" style="margin-bottom: 2px;"> 
-<strong>Spoiler!</strong> <input value="Show" style="margin: 0px; padding: 0px; width: 45px; font-size: 10px;" onclick="if(this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != 'inline') 
-{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'inline'; this.innerText = ''; this.value = 'Hide'; } 
-else 
-{ this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value='Show'; }" type="button" />
-</div> 
-<div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">This is a spoiler. Insert<br>
-case explanation here.</div> 
-</div> 
-</div>
-
-</div> 
-</div>
-
-<p id="apollo_tip">PROTIP! If you're bored,<br> click "Bored?" on the<br> left side of the page!</p>
-
-
-
-
-
-</div> 
-<div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">{param}</div> 
-</div> 
-</div>
-
-
-
-</div> 
-<div class="alt2" style="border: 0px inset; padding: 0px;"> 
-<div class="spoiler" style="display: none;">{param}</div> 
-</div> 
-</div>
-
-
-</div>
-
-<img id="apollo_help" src="Apollo_Grinning.gif">
-
-
-<!--#include virtual="page_essentials.html" -->
-
-
-
+<h1>WORK IN PROGRESS. THE PROGRESS OF ADDING CSS TO THIS WEB PAGE, THAT IS.</h1>
 
 </body>
 </html>
