--- a/timing_game.html
+++ b/timing_game.html
@@ -63,11 +63,11 @@
 <script src="Release/fileloader.js"></script>
 <script>if (!(!Math.fround)) {
   var script = document.createElement('script');
-  script.src = "Release/Timing Game WebGL.js";
+  script.src = "Release/WebGL HTML5.js";
   document.body.appendChild(script);
 } else {
   var codeXHR = new XMLHttpRequest();
-  codeXHR.open('GET', 'Release/Timing Game WebGL.js', true);
+  codeXHR.open('GET', 'Release/WebGL HTML5.js', true);
   codeXHR.onload = function() {
     var code = codeXHR.responseText;
     if (!Math.fround) { 
