--- a/timing_game.html
+++ b/timing_game.html
@@ -101,5 +101,9 @@ try {
   codeXHR.send(null);
 }
 </script>
+
+<div id="instructions">
+<p id="instructions_para">Instructions: Press Z when<br> the orange circle is inside <br>the black outline of a circle.</p>
+</div>
   </body>
 </html>
