--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -8,6 +8,9 @@
 <body>
 
 <h1>WORK IN PROGRESS. THE PROGRESS OF ADDING CSS TO THIS WEB PAGE, THAT IS.</h1>
+<br><br>
+<p>...which is never going to be done. so, in the meantime, just <a href="archives/index.html">click here</a> to get to the page.</p>
+<p>but, I <i>did</i> change the font-family to sans-serif, so the text looks nicer.</p>
 
 </body>
 </html>
