--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
-﻿<!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>AAE: To solve them once and for all</title>
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <style>
+        h4{
+            position:relative;
+             top: -19px;
+             
+        }
+    </style>
 </head>
 <body>
-
-<h1>WORK IN PROGRESS. THE PROGRESS OF ADDING CSS TO THIS WEB PAGE, THAT IS.</h1>
-<br><br>
-<p>...which is never going to be done. so, in the meantime, just <a href="archives/index.html">click here</a> to get to the page.</p>
-<p>but, I <i>did</i> change the font-family to sans-serif, so the text looks nicer.</p>
-
+    <h1>Photography Desktop Backgrounds</h1>
+    <h4>Wallpapers for both computers and phones</h4>
+    <ul>
+        <li>
+            <a href="stb.html">Stone beach</a>
+            <br />
+            <img src="stb1.JPG" width="90" height="120" />
+        </li>
+        <li>
+            <a href="foatr.html">Forests and trees</a>
+            <br />
+            <img src="foatr1.JPG" width="90" height="68" />
+        </li>
+        <li>
+            <a href="pt.html">Patterns</a>
+            <br />
+            <img src="pt1.JPG" width="90" height="68"/>
+        </li>
+        <li>
+            <a href="misc.html">Miscellaneous</a>
+            <br />
+            <img src="misc1.jpg" width="90" height="120" />
+        </li>
+    </ul>
+    
+    <p>by <a target="_blank" href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA">AANickFan</a> and <a href="https://www.youtube.com/channel/UCj4ocyb5hdoIELyZQ5ZVt8A">StovelJacob</a></p>
 </body>
 </html>
