--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>
             <a href="misc.html">Miscellaneous</a>
             <br />
-            <img src="misc1.jpg" width="90" height="120" />
+            <img src="misc1.JPG" width="90" height="120" />
         </li>
     </ul>
     
