--- a/tabs.html
+++ b/tabs.html
@@ -174,5 +174,33 @@ S|----o-------o-------o-------o-------o-------o---<br>
 B|o-------o-------o-------o-------o-------o-------<br><br>
 </div>
 
+<div style="background-color:#EBEBEB">
+
+<h4>Hideous</h4>
+
+BPM: 110
+
+<h4>Bass</h4>
+
+Verse:<br>
+|4-4-4-4---------4-4-4-4-5-5-5-5-<br>
+|--------2-2-2-2-----------------<br>
+|--------------------------------<br>
+|--------------------------------<br><br>
+
+Bridge:<br>
+|--------------------------------------------------------------------------------------------------------------------------------<br>
+|--------------------------------------------------------------------------------------------------------------------------------<br>
+|0------------------------------3---------------4---------------------------------------------------------------6----------------<br>
+|----------------2-----------------------------------------------4---------------2---------------4------6------------------------<br><br>
+
+Chorus:<br>
+|--------------------------------<br>
+|3-3-3-3---------3-3-3-3-5-5-5-5-<br>
+|--------3-3-3-3-----------------<br>
+|--------------------------------<br><br>
+
+</div>
+
 </body>
 </html>
