--- a/stuffybynickfan.html
+++ b/stuffybynickfan.html
@@ -16,7 +16,9 @@ color: #59006C;
 <a href="stuffybynickfan.html"><h1>Stuff By Nickfan</h1></a>
 <h2>Stuff</h2>
 <ul>
-<li>Music<ul><li><a href="tabs.html">Tabs</a></li></ul></li>
+<li><a href="music.html">Music</a><ul><li><a href="tabs.html">Tabs</a></li><li><a href="songs.html">Songs</a></li></ul></li>
 </ul>
+
+<a href="http://data.typeracer.com/pit/profile?user=aanickfan&ref=badge" target="_top"><img src="http://data.typeracer.com/misc/badge?user=aanickfan" border="0" alt="TypeRacer.com scorecard for user aanickfan"/></a>
 </body>
 </html>
