--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 Ace Attorney Explained is dead.<br>
-Sorry.
+Sorry.<br>
+<a href="http://www.visitormap.org/" target="_top"><img src="http://www.visitormap.org/map/m:xjgqktmdzzizjexm/s:1/c:ffffff/p:dot/y:1.png" alt="Free Visitor Maps at VisitorMap.org" border="0">
 </body>
 </html>
