--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ p:hover{
 </style>
 </head>
 <body>
-<p>If I ever make a mega man fan game, it will be here</p>
+<p>I'll put some stuff here in the future</p>
 </body>
 </html>
