--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-<title>HELLO</title>
-<style>
-p:hover{
-	color: purple;
-}
-</style>
+<title>
+AANICKFAN
+</title>
 </head>
 <body>
-<h2>My Game</h2>
-<p>2017-12-08:</p><a href="hello78.exe">hello78</a>
+<h1><a href="index.html" style="text-decoration:none;color:black;
+">AANickFan's Domain</a></h1>
+<ul>
+<li><a href="game.html">Game</a></li>
+<li><a href="music.html">Music</a></li>
+</ul>
+
 </body>
 </html>
