--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>
 AANICKFAN
 </title>
+<link rel="icon" href="icon.png">
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
