--- a/famitracker_45.html
+++ b/famitracker_45.html
@@ -7,7 +7,7 @@ AANICKFAN
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain</a></h1>
+">AANickFan's Domain</a>: FamiTracker 45</h1>
 
 <h2>FamiTracker 45</h2>
 <a href="famitracker_45.png" target="_blank"><img src="famitracker_45.png" width="150px" height="150px"></img></a>
