--- a/games.html
+++ b/games.html
@@ -10,8 +10,11 @@ p:hover{
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain</a></h1>
-<h2>My Game</h2>
-<p>2017-12-08:</p><a href="hello78.exe">hello78</a>
+">AANickFan's Domain</a>: Games</h1>
+<hr>
+<h3>2017-12-08</h3><a href="hello78.exe">hello78</a>
+<hr>
+<h3>2018-04-28</h3><a href="hypno.exe">Berry Forest</a>
+<hr>
 </body>
 </html>
