--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ AANICKFAN
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a></h1>
 <ul>
-<li><a href="game.html">Game</a></li>
+<li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
 </ul>
 
