--- a/music.html
+++ b/music.html
@@ -7,7 +7,7 @@ AANICKFAN
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain</a></h1>
+">AANickFan's Domain</a>: Music</h1>
 <ul>
 <li><a href="anvil.html">Anvil</a></li>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
