--- a/famitracker_45.html
+++ b/famitracker_45.html
@@ -3,14 +3,14 @@
 <title>
 AANICKFAN
 </title>
-<link rel="icon" href="icon.png">
+<link rel="icon" href="images/icon.png">
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a>: FamiTracker 45</h1>
 
 <h2>FamiTracker 45</h2>
-<a href="famitracker_45.png" target="_blank"><img src="famitracker_45.png" width="150px" height="150px"></img></a>
+<a href="images/famitracker_45.png" target="_blank"><img src="images/famitracker_45.png" width="150px" height="150px"></img></a>
 <br>
 Length: 35:18
 <br>
@@ -20,95 +20,95 @@ Tracks: 45
 
 <br><br>
 
-1 Pony Backpack<br><audio controls><source src="1.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+1 Pony Backpack<br><audio controls><source src="music/1.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-2 Aspire<br><audio controls><source src="2.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+2 Aspire<br><audio controls><source src="music/2.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-3 03<br><audio controls><source src="3.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+3 03<br><audio controls><source src="music/3.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-4 Makes Sense<br><audio controls><source src="4.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+4 Makes Sense<br><audio controls><source src="music/4.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-5 I'm Stingy And I'm Your Biggest Fan<br><audio controls><source src="5.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+5 I'm Stingy And I'm Your Biggest Fan<br><audio controls><source src="music/5.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-6 Chord Entangler<br><audio controls><source src="6.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+6 Chord Entangler<br><audio controls><source src="music/6.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-7 Castle<br><audio controls><source src="7.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+7 Castle<br><audio controls><source src="music/7.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-8 Dative Esque Transition<br><audio controls><source src="8.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+8 Dative Esque Transition<br><audio controls><source src="music/8.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-9 Placeholder Shortened<br><audio controls><source src="9.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+9 Placeholder Shortened<br><audio controls><source src="music/9.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-10 Hidden Book<br><audio controls><source src="10.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+10 Hidden Book<br><audio controls><source src="music/10.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-11 Striking<br><audio controls><source src="11.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+11 Striking<br><audio controls><source src="music/11.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-12 Bergdagg<br><audio controls><source src="12.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+12 Bergdagg<br><audio controls><source src="music/12.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-13 Rapid Gray<br><audio controls><source src="13.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+13 Rapid Gray<br><audio controls><source src="music/13.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-14 Irresolute<br><audio controls><source src="14.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+14 Irresolute<br><audio controls><source src="music/14.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-15 Intrinsic<br><audio controls><source src="15.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+15 Intrinsic<br><audio controls><source src="music/15.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-16 own1<br><audio controls><source src="16.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+16 own1<br><audio controls><source src="music/16.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-17 own2<br><audio controls><source src="17.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+17 own2<br><audio controls><source src="music/17.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-18 own3<br><audio controls><source src="18.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+18 own3<br><audio controls><source src="music/18.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-19 copper<br><audio controls><source src="19.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+19 copper<br><audio controls><source src="music/19.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-20 terrarium<br><audio controls><source src="20.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+20 terrarium<br><audio controls><source src="music/20.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-21 tenuous<br><audio controls><source src="21.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+21 tenuous<br><audio controls><source src="music/21.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-22 fair<br><audio controls><source src="22.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+22 fair<br><audio controls><source src="music/22.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-23 tangy<br><audio controls><source src="23.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+23 tangy<br><audio controls><source src="music/23.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-24 heady<br><audio controls><source src="24.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+24 heady<br><audio controls><source src="music/24.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-25 jafar<br><audio controls><source src="25.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+25 jafar<br><audio controls><source src="music/25.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-26 clove hunt<br><audio controls><source src="26.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+26 clove hunt<br><audio controls><source src="music/26.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-27 afterthought dirt<br><audio controls><source src="27.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+27 afterthought dirt<br><audio controls><source src="music/27.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-28 branch tax<br><audio controls><source src="28.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+28 branch tax<br><audio controls><source src="music/28.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-29 mellow moor<br><audio controls><source src="29.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+29 mellow moor<br><audio controls><source src="music/29.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-30 seventh cherry for the stew<br><audio controls><source src="30.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+30 seventh cherry for the stew<br><audio controls><source src="music/30.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-31 penitent twist<br><audio controls><source src="31.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+31 penitent twist<br><audio controls><source src="music/31.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-32 My canvas was transported<br><audio controls><source src="32.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+32 My canvas was transported<br><audio controls><source src="music/32.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-33 public coil<br><audio controls><source src="33.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+33 public coil<br><audio controls><source src="music/33.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-34 Door_<br><audio controls><source src="34.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+34 Door_<br><audio controls><source src="music/34.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-35 Binary_<br><audio controls><source src="35.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+35 Binary_<br><audio controls><source src="music/35.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-36 DracoNIan IcoN<br><audio controls><source src="36.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+36 DracoNIan IcoN<br><audio controls><source src="music/36.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-37 fastened in frame<br><audio controls><source src="37.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+37 fastened in frame<br><audio controls><source src="music/37.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-38 WOOL PRESS<br><audio controls><source src="38.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+38 WOOL PRESS<br><audio controls><source src="music/38.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-39 Moss_<br><audio controls><source src="39.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+39 Moss_<br><audio controls><source src="music/39.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-40 J2<br><audio controls><source src="40.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+40 J2<br><audio controls><source src="music/40.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-41 Tracheophyte<br><audio controls><source src="41.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+41 Tracheophyte<br><audio controls><source src="music/41.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-42 Chaupar<br><audio controls><source src="42.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+42 Chaupar<br><audio controls><source src="music/42.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-43 Cactus<br><audio controls><source src="43.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+43 Cactus<br><audio controls><source src="music/43.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-44 Ivrit<br><audio controls><source src="44.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+44 Ivrit<br><audio controls><source src="music/44.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-45 Four Chambers<br><audio controls><source src="45.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+45 Four Chambers<br><audio controls><source src="music/45.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
