--- a/anvil.html
+++ b/anvil.html
@@ -3,7 +3,7 @@
 <title>
 AANICKFAN
 </title>
-<link rel="icon" href="icon.png">
+<link rel="icon" href="images/icon.png">
 
 <style>
 a{
@@ -23,7 +23,7 @@ color: red;
 ">AANickFan's Domain</a>: Anvil</h1>
 
 <h2>Anvil</h2>
-<a href="anvil.png" target="_blank"><img src="anvil.png" width="150px" height="150px"></img></a>
+<a href="images/anvil.png" target="_blank"><img src="images/anvil.png" width="150px" height="150px"></img></a>
 <br>
 Length: 19:56
 <br>
@@ -33,25 +33,25 @@ Tracks: 10
 
 <br><br>
 
-1 the best christmas instrumental out there<br><audio controls><source src="46.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+1 the best christmas instrumental out there<br><audio controls><source src="music/46.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-2 <a href="47.png" target="_blank">Lapis Trade</a><br><audio controls><source src="47.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+2 <a href="images/47.png" target="_blank">Lapis Trade</a><br><audio controls><source src="music/47.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-3 <a href="48.png" target="_blank">Yellow Desk</a><br><audio controls><source src="48.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+3 <a href="images/48.png" target="_blank">Yellow Desk</a><br><audio controls><source src="music/48.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-4 <a href="49.png" target="_blank">Incinerator</a><br><audio controls><source src="49.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+4 <a href="images/49.png" target="_blank">Incinerator</a><br><audio controls><source src="music/49.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-5 <a href="50.png" target="_blank">CAKE</a><br><audio controls><source src="50.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+5 <a href="images/50.png" target="_blank">CAKE</a><br><audio controls><source src="music/50.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-6 <a href="51.png" target="_blank">Chloroplast</a><br><audio controls><source src="51.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+6 <a href="images/51.png" target="_blank">Chloroplast</a><br><audio controls><source src="music/51.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-7 <a href="52.png" target="_blank">Systematic+</a><br><audio controls><source src="52.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+7 <a href="images/52.png" target="_blank">Systematic+</a><br><audio controls><source src="music/52.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-8 <a href="53.png" target="_blank">Barrel</a><br><audio controls><source src="53.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+8 <a href="images/53.png" target="_blank">Barrel</a><br><audio controls><source src="music/53.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-9 <a href="54.png" target="_blank">1134</a><br><audio controls><source src="54.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+9 <a href="images/54.png" target="_blank">1134</a><br><audio controls><source src="music/54.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-10 <a href="55.png" target="_blank">Renaissance_</a><br><audio controls><source src="55.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+10 <a href="images/55.png" target="_blank">Renaissance_</a><br><audio controls><source src="music/55.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
