--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>AANICKFAN</title>
-<link rel="icon" href="icon.png">
+<link rel="icon" href="images/icon.png">
 <style>
 p:hover{
 	color: purple;
@@ -12,9 +12,9 @@ p:hover{
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a>: Games</h1>
 <hr>
-<h3>2017-12-08</h3><a href="hello78.exe">hello78</a>
+<h3>2017-12-08</h3><a href="games/hello78.exe">hello78</a>
 <hr>
-<h3>2018-04-28</h3><a href="hypno.exe">Berry Forest</a>
+<h3>2018-04-28</h3><a href="games/hypno.exe">Berry Forest</a>
 <hr>
 </body>
 </html>
