addition of Hello New

--- a/music.html
+++ b/music.html
@@ -11,6 +11,7 @@ AANICKFAN
 <ul>
 <li><a href="anvil.html">Anvil</a></li>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
+<li><a href="hello_new.html">Hello New</a></li>
 </ul>
 
 </body>
